--- a/html/index.html
+++ b/html/index.html
@@ -1,12 +1,42 @@
-<html>
-<head>
-<title>maxmccord.co</title>
-</head>
-<body style="text-align: center">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<h1>maxmccord.co</h1>
+    <title>maxmccord.co</title>
 
-<p>Site is under construction.</p>
+    <link href="/vendor/css/bootstrap.min.css" rel="stylesheet">
 
-</body>
+    <style type="text/css">
+
+      .under-construction {
+        padding: 40px 15px;
+        text-align: center;
+      }
+
+    </style>
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+
+    <div class="container">
+
+      <div class="under-construction">
+        <h1>maxmccord.co</h1>
+        <p class="lead">This site is under construction.</p>
+      </div>
+
+    </div>
+
+    <script src="/vendor/js/jquery.min.js"></script>
+    <script src="/vendor/js/bootstrap.min.js"></script>
+  </body>
 </html>
