--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <title>maxmccord.co</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="/vendor/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
     <!-- Custom Fonts -->
     <!-- TODO: Add this back only if I actually need it -->
@@ -129,8 +129,8 @@
     </footer>
 
     <!-- Vendor JS -->
-    <script src="/vendor/js/jquery.min.js"></script>
-    <script src="/vendor/js/bootstrap.min.js"></script>
+    <script src="/vendor/jquery/jquery.min.js"></script>
+    <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
 
 </body>
 </html>
