--- a/src/index.html
+++ b/src/index.html
@@ -70,8 +70,9 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">hello</div>
-                <div class="intro-heading">website</div>
+                <!-- <div class="intro-lead-in">Software Engineer</div> -->
+                <div class="intro-heading">Max McCord</div>
+                <a href="/resume" class="page-scroll btn btn-xl">Resume</a>
             </div>
         </div>
     </header>
@@ -81,8 +82,26 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Max McCord</h2>
+                    <h3 class="section-subheading text-muted">Software Engineer</h3>
+                </div>
+                <div class="col-lg-8 bio-summary">
                     <h2 class="section-heading">Bio</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <p>I am an inquisitive problem-solver who is quick to adapt to new challenges thanks to a love of learning and a positive attitude.</p>
+                    <p>I got hooked on programming at a young age. Over years of self-teaching, I developed a thirst for knowledge and a knack for applying what I know in new and interesting ways. This has carried over into my career, where I've earned a reputation for always asking the right questions and putting out high-quality work in the face of complexity.</p>
+                    <p>Software is my passion. To me, there is nothing more satisfying than breaking down a problem, building out the pieces of a solution, and watching them come together to bring your vision to life. Technology has an incredible ability to shape the human experience, and my goal is to be a part of a movement that takes us towards a brighter future.</p>
+                    <p>My favorite question: "Why not?"</p>
+                </div>
+                <div class="col-lg-4">
+                    <h2>Education</h2>
+                    <p>Texas Tech University (Lubbock, TX)<br />
+                    B.S. in Computer Engineering<br />
+                    Graduated Spring 2014<br />
+                    GPA: 3.98 <i>summa cum laude</i></p>
+                </div>
+                <div class="col-lg-4">
+                    <h2>Skills</h2>
+                    <p>Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum.</p>
                 </div>
             </div>
         </div>
@@ -98,6 +117,54 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <ul class="timeline">
+                    <li>
+                        <div class="timeline-image">
+                            <img class="img-circle img-responsive" src="img/experience/ni-logo.png" alt="">
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>Staff Software Engineer @ NI</h4>
+                                <h4 class="subheading">Aug 2016 - present</h4>
+                            </div>
+                            <div class="timeline-body">
+                               <p class="text-muted">Developing driver-level software for NI PXI, a PCI-based platform for automated test, measurement, and control.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="timeline-inverted">
+                        <div class="timeline-image">
+                            <img class="img-circle img-responsive" src="img/experience/ni-logo.png" alt="">
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>Software Engineer @ NI</h4>
+                                <h4 class="subheading">Jul 2014 - Aug 2016</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="text-muted">Developed cross-platform software (both kernel- and user-mode) to assist in the identification, monitoring, and control of NI PXI chassis, embedded controllers, and MXI hardware.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="timeline-image">
+                            <img class="img-circle img-responsive" src="img/experience/ni-logo.png" alt="">
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>Software Intern @ NI</h4>
+                                <h4 class="subheading">May 2013 - Aug 2013</h4>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="text-muted">Worked as a team-member of NI's Driver Services group.</p>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </section>
 
     <!-- Projects Section -->
@@ -106,7 +173,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Projects</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Under construction.</h3>
                 </div>
             </div>
         </div>
@@ -118,7 +185,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Under construction.</h3>
                 </div>
             </div>
         </div>
