--- a/src/index.html
+++ b/src/index.html
@@ -45,19 +45,19 @@
             <div class="collapse navbar-collapse" id="navbar-menu-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
-                        <a href="#page-top"></a>
+                        <a href="#page-top" class="page-scroll"></a>
                     </li>
                     <li>
-                        <a href="#bio">Bio</a>
+                        <a href="#bio" class="page-scroll">Bio</a>
                     </li>
                     <li>
-                        <a href="#experience">Experience</a>
+                        <a href="#experience" class="page-scroll">Experience</a>
                     </li>
                     <li>
-                        <a href="#projects">Projects</a>
+                        <a href="#projects" class="page-scroll">Projects</a>
                     </li>
                     <li>
-                        <a href="#contact">Contact</a>
+                        <a href="#contact" class="page-scroll">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -198,6 +198,10 @@
     <!-- Vendor JS -->
     <script src="/vendor/jquery/jquery.min.js"></script>
     <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
+
+    <!-- Custom JS -->
+    <script src="/js/homepage.js"></script>
 
 </body>
 </html>
