Adding simple skill sections

--- a/src/index.html
+++ b/src/index.html
@@ -81,10 +81,13 @@
     <section id="bio">
         <div class="container">
             <div class="row">
+                <!-- Heading -->
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Max McCord</h2>
                     <h3 class="section-subheading text-muted">Software Engineer</h3>
                 </div>
+
+                <!-- Bio (Summary) -->
                 <div class="col-lg-8 bio-summary">
                     <h2 class="section-heading">Bio</h2>
                     <p>I am an inquisitive problem-solver who is quick to adapt to new challenges thanks to a love of learning and a positive attitude.</p>
@@ -92,6 +95,8 @@
                     <p>Software is my passion. To me, there is nothing more satisfying than breaking down a problem, building out the pieces of a solution, and watching them come together to bring your vision to life. Technology has an incredible ability to shape the human experience, and my goal is to be a part of a movement that takes us towards a brighter future.</p>
                     <p>My favorite question: "Why not?"</p>
                 </div>
+
+                <!-- Education -->
                 <div class="col-lg-4">
                     <h2>Education</h2>
                     <p>Texas Tech University (Lubbock, TX)<br />
@@ -99,9 +104,98 @@
                     Graduated Spring 2014<br />
                     GPA: 3.98 <i>summa cum laude</i></p>
                 </div>
-                <div class="col-lg-4">
-                    <h2>Skills</h2>
-                    <p>Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum.</p>
+
+                <!-- Skill -->
+                <div class="col-lg-4 container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h2>Skills</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-3">
+                            <span>C/C++</span>
+                        </div>
+                        <div class="col-md-9">
+                            <div class="progress">
+                                <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                                    <span class="sr-only">9/10</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-3">
+                            <span>Python</span>
+                        </div>
+                        <div class="col-md-9">
+                            <div class="progress">
+                                <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+                                    <span class="sr-only">6/10</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-3">
+                            <span>Java</span>
+                        </div>
+                        <div class="col-md-9">
+                            <div class="progress">
+                                <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+                                    <span class="sr-only">8/10</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-3">
+                            <span>JavaScript</span>
+                        </div>
+                        <div class="col-md-9">
+                            <div class="progress">
+                                <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
+                                    <span class="sr-only">7/10</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-3">
+                            <span>Node.js</span>
+                        </div>
+                        <div class="col-md-9">
+                            <div class="progress">
+                                <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
+                                    <span class="sr-only">7/10</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-3">
+                            <span>AngularJS</span>
+                        </div>
+                        <div class="col-md-9">
+                            <div class="progress">
+                                <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
+                                    <span class="sr-only">4/10</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-3">
+                            <span>AWS</span>
+                        </div>
+                        <div class="col-md-9">
+                            <div class="progress">
+                                <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
+                                    <span class="sr-only">4/10</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
