--- a/src/index.html
+++ b/src/index.html
@@ -294,7 +294,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
 
     <!-- Custom JS -->
-    <script src="/js/homepage.js"></script>
+    <script src="/js/homepage.min.js"></script>
 
 </body>
 </html>
