--- a/src/index.html
+++ b/src/index.html
@@ -215,7 +215,7 @@
                 <ul class="timeline">
                     <li>
                         <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="img/experience/ni-logo.png" alt="">
+                            <img class="img-circle img-responsive" src="/img/experience/ni-logo.png" alt="">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
@@ -229,7 +229,7 @@
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="img/experience/ni-logo.png" alt="">
+                            <img class="img-circle img-responsive" src="/img/experience/ni-logo.png" alt="">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
@@ -243,7 +243,7 @@
                     </li>
                     <li>
                         <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="img/experience/ni-logo.png" alt="">
+                            <img class="img-circle img-responsive" src="/img/experience/ni-logo.png" alt="">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
