--- a/src/index.html
+++ b/src/index.html
@@ -80,6 +80,11 @@
     <section id="bio">
         <div class="container">
             <div class="row">
+                <div class="col-lg-12">
+                    <img class="profile" src="/img/bio/max-profile.jpg" />
+                </div>
+            </div>
+            <div class="row">
                 <!-- Heading -->
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Max McCord</h2>
