Implementing header design and updating the color scheme to red.

--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,6 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <!-- <div class="intro-lead-in">Software Engineer</div> -->
                 <div class="intro-heading">Max McCord</div>
                 <a href="/resume" class="page-scroll btn btn-xl">Resume</a>
             </div>
@@ -87,16 +86,15 @@
             <div class="row">
                 <!-- Heading -->
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Max McCord</h2>
-                    <h3 class="section-subheading text-muted">Software Engineer</h3>
+                    <h3 class="section-subheading text-muted">Engineer. Musician. Dreamer.</h3>
                 </div>
 
                 <!-- Bio (Summary) -->
                 <div class="col-lg-8 bio-summary">
                     <h2 class="section-heading">Bio</h2>
-                    <p>I am an inquisitive problem-solver who is quick to adapt to new challenges thanks to a love of learning and a positive attitude.</p>
+                    <p>Software is my passion.</p>
                     <p>I got hooked on programming at a young age. Over years of self-teaching, I developed a thirst for knowledge and a knack for applying what I know in new and interesting ways. This has carried over into my career, where I've earned a reputation for always asking the right questions and putting out high-quality work in the face of complexity.</p>
-                    <p>Software is my passion. To me, there is nothing more satisfying than breaking down a problem, building out the pieces of a solution, and watching them come together to bring your vision to life. Technology has an incredible ability to shape the human experience, and my goal is to be a part of a movement that takes us towards a brighter future.</p>
+                    <p>To me, there is nothing more satisfying than breaking down a problem, building out the pieces of a solution, and watching them come together to bring your vision to life. Technology has an incredible ability to shape the human experience, and my goal is to be a part of a movement that takes us towards a brighter future.</p>
                     <p>My favorite question: "Why not?"</p>
                 </div>
 
@@ -122,7 +120,7 @@
                         </div>
                         <div class="col-md-9">
                             <div class="progress">
-                                <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                                <div class="progress-bar progress-bar-danger progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
                                     <span class="sr-only">9/10</span>
                                 </div>
                             </div>
@@ -134,7 +132,7 @@
                         </div>
                         <div class="col-md-9">
                             <div class="progress">
-                                <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+                                <div class="progress-bar progress-bar-danger progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
                                     <span class="sr-only">6/10</span>
                                 </div>
                             </div>
@@ -146,7 +144,7 @@
                         </div>
                         <div class="col-md-9">
                             <div class="progress">
-                                <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+                                <div class="progress-bar progress-bar-danger progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
                                     <span class="sr-only">8/10</span>
                                 </div>
                             </div>
@@ -158,7 +156,7 @@
                         </div>
                         <div class="col-md-9">
                             <div class="progress">
-                                <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
+                                <div class="progress-bar progress-bar-danger progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
                                     <span class="sr-only">7/10</span>
                                 </div>
                             </div>
@@ -170,7 +168,7 @@
                         </div>
                         <div class="col-md-9">
                             <div class="progress">
-                                <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
+                                <div class="progress-bar progress-bar-danger progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
                                     <span class="sr-only">7/10</span>
                                 </div>
                             </div>
@@ -182,7 +180,7 @@
                         </div>
                         <div class="col-md-9">
                             <div class="progress">
-                                <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
+                                <div class="progress-bar progress-bar-danger progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
                                     <span class="sr-only">4/10</span>
                                 </div>
                             </div>
@@ -194,7 +192,7 @@
                         </div>
                         <div class="col-md-9">
                             <div class="progress">
-                                <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
+                                <div class="progress-bar progress-bar-danger progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
                                     <span class="sr-only">4/10</span>
                                 </div>
                             </div>
