Fixing experience layout, updating sub-headings

--- a/src/index.html
+++ b/src/index.html
@@ -211,56 +211,56 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Experience</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">&nbsp;</h3>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-12">
-                <ul class="timeline">
-                    <li>
-                        <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="/img/experience/ni-logo.png" alt="">
-                        </div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4>Staff Software Engineer @ NI</h4>
-                                <h4 class="subheading">Aug 2016 - present</h4>
+            <div class="row">
+                <div class="col-lg-12">
+                    <ul class="timeline">
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="/img/experience/ni-logo.png" alt="">
                             </div>
-                            <div class="timeline-body">
-                               <p class="text-muted">Developing driver-level software for NI PXI, a PCI-based platform for automated test, measurement, and control.</p>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>Staff Software Engineer @ NI</h4>
+                                    <h4 class="subheading">Aug 2016 - present</h4>
+                                </div>
+                                <div class="timeline-body">
+                                   <p class="text-muted">Developing driver-level software for NI PXI, a PCI-based platform for automated test, measurement, and control.</p>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="/img/experience/ni-logo.png" alt="">
-                        </div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4>Software Engineer @ NI</h4>
-                                <h4 class="subheading">Jul 2014 - Aug 2016</h4>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="/img/experience/ni-logo.png" alt="">
                             </div>
-                            <div class="timeline-body">
-                                <p class="text-muted">Developed cross-platform software (both kernel- and user-mode) to assist in the identification, monitoring, and control of NI PXI chassis, embedded controllers, and MXI hardware.</p>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>Software Engineer @ NI</h4>
+                                    <h4 class="subheading">Jul 2014 - Aug 2016</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Developed cross-platform software (both kernel- and user-mode) to assist in the identification, monitoring, and control of NI PXI chassis, embedded controllers, and MXI hardware.</p>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="/img/experience/ni-logo.png" alt="">
-                        </div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4>Software Intern @ NI</h4>
-                                <h4 class="subheading">May 2013 - Aug 2013</h4>
+                        </li>
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="/img/experience/ni-logo.png" alt="">
                             </div>
-                            <div class="timeline-body">
-                                <p class="text-muted">Worked as a team-member of NI's Driver Services group.</p>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>Software Intern @ NI</h4>
+                                    <h4 class="subheading">May 2013 - Aug 2013</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Worked as a team-member of NI's Driver Services group.</p>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                </ul>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
@@ -271,7 +271,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Projects</h2>
-                    <h3 class="section-subheading text-muted">Under construction.</h3>
+                    <h3 class="section-subheading text-muted">Coming soon.</h3>
                 </div>
             </div>
         </div>
@@ -283,7 +283,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact</h2>
-                    <h3 class="section-subheading text-muted">Under construction.</h3>
+                    <h3 class="section-subheading text-muted">Coming soon.</h3>
                 </div>
             </div>
         </div>
