Adding links to NI's website

--- a/src/index.html
+++ b/src/index.html
@@ -223,7 +223,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Staff Software Engineer @ NI</h4>
+                                    <h4>Staff Software Engineer @ <a href="http://www.ni.com/">NI</a></h4>
                                     <h4 class="subheading">Aug 2016 - present</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -237,7 +237,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Software Engineer @ NI</h4>
+                                    <h4>Software Engineer @ <a href="http://www.ni.com/">NI</a></h4>
                                     <h4 class="subheading">Jul 2014 - Aug 2016</h4>
                                 </div>
                                 <div class="timeline-body">
@@ -251,7 +251,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Software Intern @ NI</h4>
+                                    <h4>Software Intern @ <a href="http://www.ni.com/">NI</a></h4>
                                     <h4 class="subheading">May 2013 - Aug 2013</h4>
                                 </div>
                                 <div class="timeline-body">
