adding images of pxi chassis

--- a/src/index.html
+++ b/src/index.html
@@ -219,7 +219,7 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="/img/experience/ni-logo.png" alt="">
+                                <img class="img-circle img-responsive" src="/img/experience/big-chassis.png" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -233,7 +233,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="/img/experience/ni-logo.png" alt="">
+                                <img class="img-circle img-responsive" src="/img/experience/small-chassis.png" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
