Slight updating of bio and education formatting

--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,7 @@
                 <!-- Bio (Summary) -->
                 <div class="col-lg-8 bio-summary">
                     <h2 class="section-heading">Bio</h2>
-                    <p>Software is my passion.</p>
+                    <p class="large">Software is my passion.</p>
                     <p>I got hooked on programming at a young age. Over years of self-teaching, I developed a thirst for knowledge and a knack for applying what I know in new and interesting ways. This has carried over into my career, where I've earned a reputation for always asking the right questions and putting out high-quality work in the face of complexity.</p>
                     <p>To me, there is nothing more satisfying than breaking down a problem, building out the pieces of a solution, and watching them come together to bring your vision to life. Technology has an incredible ability to shape the human experience, and my goal is to be a part of a movement that takes us towards a brighter future.</p>
                     <p>My favorite question: "Why not?"</p>
@@ -101,10 +101,12 @@
                 <!-- Education -->
                 <div class="col-lg-4">
                     <h2>Education</h2>
-                    <p>Texas Tech University (Lubbock, TX)<br />
-                    B.S. in Computer Engineering<br />
-                    Graduated Spring 2014<br />
-                    GPA: 3.98 <i>summa cum laude</i></p>
+                    <p>
+                    <span class="text-primary"><b>Texas Tech University</b></span> (Lubbock, TX)<br />
+                    B.S. in Computer Engineering, May 2014<br />
+                    Minor in Mathematics</span><br />
+                    GPA: 3.98 <i>summa cum laude</i>
+                    </p>
                 </div>
 
                 <!-- Skill -->
