Adding skeleton modals for details about experience

--- a/src/index.html
+++ b/src/index.html
@@ -227,7 +227,8 @@
                                     <h4 class="subheading">Aug 2016 - present</h4>
                                 </div>
                                 <div class="timeline-body">
-                                   <p class="text-muted">Developing driver-level software for NI PXI, a PCI-based platform for automated test, measurement, and control.</p>
+                                    <p class="text-muted">Developing driver-level software for NI PXI, a PCI-based platform for automated test, measurement, and control.</p>
+                                    <p><a href="#experienceModal1" data-toggle="modal">Show Details &gt;</a></p>
                                 </div>
                             </div>
                         </li>
@@ -242,6 +243,7 @@
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Developed cross-platform software (both kernel- and user-mode) to assist in the identification, monitoring, and control of NI PXI chassis, embedded controllers, and MXI hardware.</p>
+                                    <p><a href="#experienceModal2" data-toggle="modal">Show Details &gt;</a></p>
                                 </div>
                             </div>
                         </li>
@@ -256,6 +258,7 @@
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Worked as a team-member of NI's Driver Services group.</p>
+                                    <p><a href="#experienceModal3" data-toggle="modal">Show Details &gt;</a></p>
                                 </div>
                             </div>
                         </li>
@@ -292,6 +295,84 @@
     <!-- Footer -->
     <footer>
     </footer>
+
+    <!-- Experience Modal 1 (Staff Software Engineer) -->
+    <div class="portfolio-modal modal fade" id="experienceModal1" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl"></div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <div class="modal-body">
+                                <h2>Staff Software Engineer</h2>
+                                <h4>National Instruments</h4>
+                                <p class="item-intro text-muted">August 2016 - present</p>
+                                <p>Details coming soon.</p>
+                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Experience Modal 2 (Software Engineer) -->
+    <div class="portfolio-modal modal fade" id="experienceModal2" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl"></div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <div class="modal-body">
+                                <h2>Software Engineer</h2>
+                                <h4>National Instruments</h4>
+                                <p class="item-intro text-muted">July 2014 - August 2016</p>
+                                <p>Details coming soon.</p>
+                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Experience Modal 3 (Intern) -->
+    <div class="portfolio-modal modal fade" id="experienceModal3" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl"></div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <div class="modal-body">
+                                <h2>Software Intern</h2>
+                                <h4>National Instruments</h4>
+                                <p class="item-intro text-muted">May 2013 - Aug 2013</p>
+                                <p>Details coming soon.</p>
+                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Vendor JS -->
     <script src="/vendor/jquery/jquery.min.js"></script>
