--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,7 @@
             <div class="row">
                 <!-- Heading -->
                 <div class="col-lg-12 text-center">
-                    <h3 class="section-subheading text-muted">Engineer. Musician. Dreamer.</h3>
+                    <h3 class="section-subheading text-muted">Engineer. Builder. Dreamer.</h3>
                 </div>
 
                 <!-- Bio (Summary) -->
